<resources>
    <string name="app_name">Nearby Contacts</string>
    <string name="nearby_contacts_activity_name">Nearby Contacts</string>
    <string name="user_name_hint">name</string>
    <string name="save_contact_button">Save</string>
    <string name="publish_own_user_button">Publish</string>
    <string name="user_email_hint">email</string>
    <string name="user_telephone_hint">telephone</string>
    <string name="action_goto_own_activity">Go home</string>
    <string name="action_show_about">About</string>
    <string name="ownActivity_name">Edit own contact</string>
    <string name="ok_button">OK</string>
    <string name="build_from_ide">Build from IDE</string>
    <string name="versionName">VersionName %1$s</string>
    <string name="versionCode">VersionCode %1$s</string>
    <string name="timeStamp">Build time %1$s</string>
    <string name="take_picture">Take Picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="no_picture_dialog_message">Please include a picture</string>
    <string name="no_picture_dialog_title">No picture!!</string>
    <string name="nope">Nope</string>
    <string name="publish">Publish</string>
    <string name="title_activity_contact_log">ContactLogActivity</string>
    <string name="action_goto_contact_log">Contact Log</string>
    <string name="contactLog_name">Contact Log</string>
    <string name="show_distinct_contacts">Show Distinct contacts</string>
    <string name="show_all">Show All</string>
    <string name="notification_title">Nearby</string>
    <string name="notification_started_text">Nearby messages is sucking your battery dry!</string>
    <string name="notification_stopped_text">Nearby messages is idling..</string>

</resources>
