<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    style="@style/Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="no.bouvet.androidskolen.nearbycontacts.OwnContactActivity">

    <ImageView
        android:id="@+id/user_picture_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:minWidth="100dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress"
            android:minWidth="100dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_telephone_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_telephone_hint"
            android:inputType="phone"
            android:minWidth="100dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/take_picture_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/remove_picture_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_picture" />

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_own_user_button" />

    </LinearLayout>

    <Switch
        android:id="@+id/publish_toggle"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:text="@string/publish" />

</LinearLayout>
